bundles/org.openhab.binding.jellyfin/src/main/java/org/openhab/binding/jellyfin/internal/api/generated/10.8.13/docs/MediaStream.md


# MediaStream

Class MediaStream.

## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**codec** | **String** | Gets or sets the codec. |  [optional] |
|**codecTag** | **String** | Gets or sets the codec tag. |  [optional] |
|**language** | **String** | Gets or sets the language. |  [optional] |
|**colorRange** | **String** | Gets or sets the color range. |  [optional] |
|**colorSpace** | **String** | Gets or sets the color space. |  [optional] |
|**colorTransfer** | **String** | Gets or sets the color transfer. |  [optional] |
|**colorPrimaries** | **String** | Gets or sets the color primaries. |  [optional] |
|**dvVersionMajor** | **Integer** | Gets or sets the Dolby Vision version major. |  [optional] |
|**dvVersionMinor** | **Integer** | Gets or sets the Dolby Vision version minor. |  [optional] |
|**dvProfile** | **Integer** | Gets or sets the Dolby Vision profile. |  [optional] |
|**dvLevel** | **Integer** | Gets or sets the Dolby Vision level. |  [optional] |
|**rpuPresentFlag** | **Integer** | Gets or sets the Dolby Vision rpu present flag. |  [optional] |
|**elPresentFlag** | **Integer** | Gets or sets the Dolby Vision el present flag. |  [optional] |
|**blPresentFlag** | **Integer** | Gets or sets the Dolby Vision bl present flag. |  [optional] |
|**dvBlSignalCompatibilityId** | **Integer** | Gets or sets the Dolby Vision bl signal compatibility id. |  [optional] |
|**comment** | **String** | Gets or sets the comment. |  [optional] |
|**timeBase** | **String** | Gets or sets the time base. |  [optional] |
|**codecTimeBase** | **String** | Gets or sets the codec time base. |  [optional] |
|**title** | **String** | Gets or sets the title. |  [optional] |
|**videoRange** | **String** | Gets the video range. |  [optional] [readonly] |
|**videoRangeType** | **String** | Gets the video range type. |  [optional] [readonly] |
|**videoDoViTitle** | **String** | Gets the video dovi title. |  [optional] [readonly] |
|**localizedUndefined** | **String** |  |  [optional] |
|**localizedDefault** | **String** |  |  [optional] |
|**localizedForced** | **String** |  |  [optional] |
|**localizedExternal** | **String** |  |  [optional] |
|**displayTitle** | **String** |  |  [optional] [readonly] |
|**nalLengthSize** | **String** |  |  [optional] |
|**isInterlaced** | **Boolean** | Gets or sets a value indicating whether this instance is interlaced. |  [optional] |
|**isAVC** | **Boolean** |  |  [optional] |
|**channelLayout** | **String** | Gets or sets the channel layout. |  [optional] |
|**bitRate** | **Integer** | Gets or sets the bit rate. |  [optional] |
|**bitDepth** | **Integer** | Gets or sets the bit depth. |  [optional] |
|**refFrames** | **Integer** | Gets or sets the reference frames. |  [optional] |
|**packetLength** | **Integer** | Gets or sets the length of the packet. |  [optional] |
|**channels** | **Integer** | Gets or sets the channels. |  [optional] |
|**sampleRate** | **Integer** | Gets or sets the sample rate. |  [optional] |
|**isDefault** | **Boolean** | Gets or sets a value indicating whether this instance is default. |  [optional] |
|**isForced** | **Boolean** | Gets or sets a value indicating whether this instance is forced. |  [optional] |
|**height** | **Integer** | Gets or sets the height. |  [optional] |
|**width** | **Integer** | Gets or sets the width. |  [optional] |
|**averageFrameRate** | **Float** | Gets or sets the average frame rate. |  [optional] |
|**realFrameRate** | **Float** | Gets or sets the real frame rate. |  [optional] |
|**profile** | **String** | Gets or sets the profile. |  [optional] |
|**type** | **MediaStreamType** | Gets or sets the type. |  [optional] |
|**aspectRatio** | **String** | Gets or sets the aspect ratio. |  [optional] |
|**index** | **Integer** | Gets or sets the index. |  [optional] |
|**score** | **Integer** | Gets or sets the score. |  [optional] |
|**isExternal** | **Boolean** | Gets or sets a value indicating whether this instance is external. |  [optional] |
|**deliveryMethod** | **SubtitleDeliveryMethod** | Gets or sets the method. |  [optional] |
|**deliveryUrl** | **String** | Gets or sets the delivery URL. |  [optional] |
|**isExternalUrl** | **Boolean** | Gets or sets a value indicating whether this instance is external URL. |  [optional] |
|**isTextSubtitleStream** | **Boolean** |  |  [optional] [readonly] |
|**supportsExternalStream** | **Boolean** | Gets or sets a value indicating whether [supports external stream]. |  [optional] |
|**path** | **String** | Gets or sets the filename. |  [optional] |
|**pixelFormat** | **String** | Gets or sets the pixel format. |  [optional] |
|**level** | **Double** | Gets or sets the level. |  [optional] |
|**isAnamorphic** | **Boolean** | Gets or sets whether this instance is anamorphic. |  [optional] |



